--- a/css/style.css
+++ b/css/style.css
@@ -366,8 +366,7 @@
     background-color: var(--second-text-color);
     border: 1px solid #e7e9fc;
     padding: 12px 24px;
-    
-    
+    border-radius: 4px;
     }
     .hero-main-btn {
         cursor: pointer;
@@ -381,7 +380,14 @@
     .picture {
         list-style: none;
     }
-    
+    .portfolio-img-item {
+        width: calc((100% - 48px) / 3);
+    }
+    .picture-text {
+            padding: 32px 16px;
+            border: 1px solid #e7e9fc;
+            margin-bottom: 8px;
+    }
     .portfolio-subtitle {
     font-weight: 500;
     font-size: 20px;
