--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,7 @@
     .team-list {
         display: flex;
         gap: 24px;
+        
     }
     .team-title {
         font-weight: 700;
@@ -308,6 +309,7 @@
     background-color: #FFFFFF;
     text-align: center;
     margin-bottom: 8px;
+    padding: 0 15px;
     }
     
     .team-item-text {
@@ -318,6 +320,8 @@
     color: #434455;
     text-align: center;
     background-color: var(--color-white);
+    padding: 24px 0; 
+    display: block;
     }
     /* --------------FOOTER-------------- */
     .web-background {
@@ -380,20 +384,16 @@
     .picture {
         list-style: none;
     }
-    .portfolio-img-item {
-        width: calc((100% - 48px) / 3);
-    }
-    .picture-text {
-            padding: 32px 16px;
-            border: 1px solid #e7e9fc;
-            margin-bottom: 8px;
-    }
+    
     .portfolio-subtitle {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--title-color);
+    margin-bottom: 8px;
+    
+    
     }
     .portfolio-text {
         font-weight: 400;
@@ -401,6 +401,7 @@
     line-height: 1.50;
     letter-spacing: 0.02em;
     color: var(--main-text-color);
+    
     }
     .portfolio-item {
         text-decoration: none;
@@ -446,13 +447,14 @@
     .advantages {
         padding-top: 96px; 
         padding-bottom: 120px;
+     
     }
     .portfolio-img {
         display: flex;
         flex-wrap: wrap;
         column-gap: 24px;
         row-gap: 48px;
-        width: calc((100% - 48px) / 3);
+    
     }
     .main-btn {
         display: flex;
@@ -460,13 +462,16 @@
         margin-bottom: 72px;
         gap: 24px;
         border-radius: 4px;
+    
     }
-    .btn-upport {
-        padding: 32px 16px;
-    }
-    .upport-container {
+    
+    .picture-text {
         padding: 32px 16px;
         border: 1px solid #e7e9fc;
-        border-top: none;
         margin-bottom: 8px;
+        border-top: none;
+    }
+    
+    .portfolio-img-item {
+        width: calc((100% - 48px) / 3);
     }
