--- a/css/style.css
+++ b/css/style.css
@@ -44,47 +44,67 @@
     
     .header {
         border-bottom: 1px solid #e7e9fc;
+        box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
     }
     .header-container {
         display: flex;
-        align-items: center;
-        
-        
+        align-items: center;   
     }
-    .header-logo {
-    font-family: "Raleway", sans-serif;
+
+.header-logo {
+font-family: "Raleway", sans-serif;
+font-weight: 800;
+font-size: 18px;
+line-height: 1.17;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: var(--color-two);
+margin-right: 76px;
+position: relative;
+     color: #404bbf;
+}
+.header-logo span {
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: var(--color-two);
-    margin-right: 76px;
-    
-    }
-    .header-logo span {
-        font-weight: 800;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
     color: var(--title-color);
-    }
+}
     .header-text-link {
-        padding: 24px 0;
-        font-family: 'Roboto';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: var(--title-color);
+    padding: 24px 0;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--title-color);
+    transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: block;
+    position: relative;
     }
     .header-menu {
         display: flex;
         gap: 40px;
+        position: relative;
+        color: #404bbf;
+    }
+    .current {
+        color: #404BBF;
     
     }
+    .current::after {
+        display: block;
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 4px;
+        background-color: #404bbf;
+        border-radius: 2px;
+        bottom: -1px;
+    }
+
     .header-soc {
         display: flex;
         margin-left: auto;
@@ -94,6 +114,8 @@
     .header-navigation {
         display: flex;
         align-items: center;
+        position: relative;
+        color: #404bbf;
     }
     .header-navigation {
         list-style: none;
@@ -103,26 +125,25 @@
     }
     .header-menu {
         text-decoration:none;
+        list-style: none;
     }
     .header-soc-title {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.50;
-    letter-spacing: 0.02em;
-    color: var(--main-text-color);
-    width: 153px;
-    height: 24px;
-    padding: 24px 0;
-    gap: 40px;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.50;
+        letter-spacing: 0.02em;
+        color: var(--main-text-color);
+        width: 153px;
+        height: 24px;
+        padding: 24px 0;
+        gap: 40px;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .header-soc-item {
         text-decoration: none;
     }
     .header-address{
     font-style: normal;
-    }
-    .header-menu {
-        list-style: none;
     }
     .header-logo {
         text-decoration: none;
@@ -147,7 +168,11 @@
     /* --------------HERO-------------- */
     .hero {
         background-color: #2E2F42;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/peopleoffice.jpg); 
         padding: 188px 0;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
         height: 600px;
         margin: 0 auto;
     }
@@ -179,6 +204,9 @@
         border:none;
         display: block;
         min-width: 169px;
+        margin-right: auto;
+        margin-left: auto;
+        transition : background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .hero-btn:hover, .hero-btn:focus {
         background-color: #404BBF;
@@ -203,6 +231,15 @@
         clip-path: inset(100%);
         clip: rect(0 0 0 0);
         overflow: hidden; 
+    }
+    .icon-container {
+        display: flex; 
+        align-items: center;
+        justify-content: center;
+        height: 112px;
+        background-color: #f4f4fd;
+        border-radius: 4px;
+        margin-bottom: 8px;
     }
     .benefists-subtitle {
     font-weight: 500;
@@ -271,8 +308,43 @@
     .team-list {
         display: flex;
         gap: 24px;
-        
+        justify-content: center;  
+        transition :  border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
+    .soc-icons {
+        display: flex;
+        gap: 24px;
+        justify-content: center; 
+    }
+    .sending :hover 
+    .sending :focus {
+    background-color: #404bbf;
+    }
+    .soc-icon-team {
+    width: 40px;
+    height: 40px;
+    background-color: var(--color-two);
+    border-radius: 50%; 
+    gap: 24px;
+}
+.sending {
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-two);
+    border-radius: 50%;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    transition :background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.sending:hover .sending:focus {
+    background-color: #404bbf;
+}
+.icons-soc {
+    fill: #F4F4FD;
+
+}
     .team-title {
         font-weight: 700;
         font-size: 36px;
@@ -287,6 +359,7 @@
         width: calc((100% - 72px) / 4);
         background: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
+    box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     }
     .team-subtitle {
         font-weight: 500;
@@ -299,7 +372,9 @@
     margin-bottom: 8px;
     padding: 0 15px;
     }
-    
+    .team-person {
+        padding: 32px 0;
+    }
     .team-item-text {
         font-weight: 400;
     font-size: 16px;
@@ -310,12 +385,63 @@
     background-color: var(--color-white);
     padding: 24px 0; 
     display: block;
+    margin-bottom: 8px;
     }
+    /* --------------СOSTOMERS-------------- */
+.customers {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.logo-customers {
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
+text-align: center;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+color: #2E2F42;
+margin-bottom: 72px;
+}
+.customers-list {
+    display: flex;
+    gap: 24px;
+    transition :border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
+.customers-item {
+    width: calc((100% - 120px) / 6);
+    height: 88px;
+}
+.customers-sending {
+    width :100%;
+    height : 100%;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #8e8f99;
+    transition : border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.customers-sending:hover {
+    border-color: #404bbf;
+    color: #404BBF;
+}
+.customers-sending:focus {
+    border-color: #404bbf;
+    color: #404BBF;
+}
+.customers-icon {
+    fill: currentColor;
+}
     /* --------------FOOTER-------------- */
     .web-background {
         background-color: #2e2f42;
         padding: 100px 0;
     }
+    
     .web-title {
     font-family: "Raleway", sans-serif;
     font-weight: 800;
@@ -343,6 +469,115 @@
     color: #F4F4FD;
     max-width: 264px;
     }
+    .prf-web {
+        font-weight: 500;
+    font-size: 16px;
+    line-height: 1.50;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    display: flex;
+    align-items: baseline;
+    margin-bottom: 16px;
+    
+    }
+    .media-web {
+        display: flex;
+        gap: 16px;
+        width: 40px;
+        height: 40px;
+        
+    }
+    .sending-web {
+        width: 100%;
+        height: 100%;
+        background-color: #4D5AE5;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 40px;
+        height: 40px;
+        transition :background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .soc-icon-team :hover, .soc-icon-team :focus {
+        background-color: #404bbf;
+    }
+    .web-icons {
+        transition : 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .footer-icons {
+        fill: #F4F4FD;
+    }
+    .footer-container {
+        display: flex;
+        align-items: baseline;   
+    }
+    .web-defs {
+        margin-right: 120px;
+    }
+    .media-web :hover {
+        background-color: #31d0aa;
+    }
+    .sending-web:focus {
+        background-color: #31d0aa;
+    }
+    /* --------------WINDOW-------------- */
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    width: 408px;
+    min-height: 584px;
+    background: #fcfcfc;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);  
+    
+    border-radius: 4px;
+}
+.data-button {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal :hover, .modal :focus {
+    background-color: #404bbf;
+    border: none; 
+}
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden; 
+    pointer-events: none;
+}
+.vector-btn {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal :hover , .modal :focus {
+    fill: #FFFFFF;
+}
     
     /* --------------PORTFOLIO-------------- */
     
