--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
         padding-left: 15px;
         padding-right: 15px;
         margin: 0 auto;
-        outline: 2px solid red;
+        /* outline: 2px solid red; */
     }
     /* --------------HEADER-------------- */
     
@@ -170,6 +170,7 @@ position: relative;
         background-color: #2E2F42;
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/peopleoffice.jpg); 
         padding: 188px 0;
+        max-width: 1440px;
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -583,18 +584,19 @@ margin-bottom: 72px;
     
     /* --------------header-PORTFOLIO-------------- */
     .hero-main-btn {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.50;
-    text-align: center;
-    letter-spacing: 0.04em;
-    color: var(--color-two);
-    background-color: var(--second-text-color);
-    border: 1px solid #e7e9fc;
-    padding: 12px 24px;
-    border-radius: 4px;
-    }
+        font-family: "Roboto", sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.50;
+        text-align: center;
+        letter-spacing: 0.04em;
+        color: var(--color-two);
+        background-color: var(--second-text-color);
+        border: 1px solid #e7e9fc;
+        padding: 12px 24px;
+        border-radius: 4px;
+        transition :color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
     .hero-main-btn {
         cursor: pointer;
     }
@@ -666,6 +668,7 @@ margin-bottom: 72px;
     }
     .hero-main-btn:hover,.hero-main-btn:focus {
         border: 1px solid transparent;
+        box-shadow:0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     }
     .advantages {
         padding-top: 96px; 
@@ -673,11 +676,44 @@ margin-bottom: 72px;
      
     }
     .portfolio-img {
+        display: block;
+    }
+    .stylish-text {
+        position: absolute;
+        top: 0;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #f4f4fd;
+        padding: 40px 32px;
+        background-color: #4d5ae5;
+        height: 100%;
+        width: 100%;
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .link:hover .stylish-text, 
+    .link:focus .stylish-text {
+    transform: translateY(0%); 
+}
+.text-container {
+    position: relative;
+    overflow: hidden;
+}
+    .portfolio-img {
         display: flex;
         flex-wrap: wrap;
         column-gap: 24px;
         row-gap: 48px;
-    
+    }
+    .portfolio-img :hover, .portfolio-img :focus {
+        box-shadow : 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .advantages {
+        padding-top: 96px; 
+        padding-bottom: 120px;
+     
     }
     .main-btn {
         display: flex;
@@ -685,6 +721,10 @@ margin-bottom: 72px;
         margin-bottom: 72px;
         gap: 24px;
         border-radius: 4px;
+        transition :  color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
     }
     
@@ -694,7 +734,6 @@ margin-bottom: 72px;
         margin-bottom: 8px;
         border-top: none;
     }
-    
     .portfolio-img-item {
         width: calc((100% - 48px) / 3);
     }
