--- a/css/style.css
+++ b/css/style.css
@@ -409,7 +409,7 @@ margin-bottom: 72px;
     display: flex;
     gap: 24px;
     transition :border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+    padding-left: 0;
 }
 .customers-item {
     width: calc((100% - 120px) / 6);
